ThriftAidOverall/client/src/index.css
/* ... */
    .pickupt:focus{
      outline: 0;
      border: 3px solid #24a0ed;
    }
    
    .pickupt::placeholder{
      position: relative;
      font-size: 22px;
      font-weight: 10;
      left:0%;
      top: 7%;
    }

    .pickupt {
      border-radius: 3px;
      position: fixed;
      top: 73%;
      left: 29.15%;
      font-size: 18px;
      font-weight: 10;
      width: 310px;
      height: 35px;
      border-width: 0.5px;
      border-color: #a9a9a9;
      padding: 0 10px;
      box-sizing: border-box;
    }

    .postingwelcometoo{
      position: absolute;
      left: 35.1%;
      top: 16.7%;
      font-family: 'Open sans';
    }

.map-container {
  width: 44vh;
  height: 67vh;
  top: 0.2%;
  left: 23.5vw;
  border-radius: 6px;
}

.page-container {
  position: fixed;
  top: 0%;
  height: calc(100vh - 6rem);
  width: 100vw;
  background-color: #f3f3f8;
  overflow-y: auto;
  overflow-x: hidden;
  padding-top: 10%;
}

.allpostings-container {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  width: 100vw;
}

.postings-container {
  position: absolute;
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-start;
  top: 30%;
  left: -5%;
  width: 100%;
}

.thriftstorepost {
  position: relative;
  margin: 1rem;
  flex-grow: 0;
  flex-shrink: 0;
  height: 48vh;
  width: 5vw;
  box-shadow: 5px 5px 5px rgba(163, 158, 198, 0.2);
  padding-left: 3%;
  margin-right: 6%;
  margin-bottom: 6%;
  left: 9%;
  border-radius: 1.2%;
  background-color: #ffffff;
  flex-basis: 14.5%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.thriftstorepostfont{
  position: absolute;
  font-size: 4vh;
  font-weight: 500;
  font-family:'Calibri';
  top: 1.5%;
  left: 3%;
}

.address-top {
  font-size: 1.55vh;
  position: absolute;
  top: 20%;
  width: 28.5vh;
  left: 11.5%;
  font-family: 'Uber Move Text';
}

.city-top {
  font-size: 2vh;
  position: absolute;
  font-family: 'Uber Move Text';
  top: 25%;
  left: 11.5%;
}

.dialoguesubmission{
  left: 4.6%;
}

.dialoguebackground{
  position: absolute;
  width: 100vw;
}

.dialoguebacktwice{
  position: absolute;
  width: 100vw;
}

.dialoguecancel-container {
  position: absolute;
  top: 25%;
  left: 50.6%;
}

.dialoguecancel {
  position: absolute;
  width: 25%;
  left: 71.8%;
  top: 14vh;
}

.dialoguebacktwice{
  position: absolute;
  width: 200vw;
}

.mapmarkerstyle {
  position: absolute;
  width: 1.5vw;
  height: 4.5vh;
  top: 19.5%;
  left: 1%;
}

.clockstyle{
  position: absolute;
  width: 1.3vw;
  height: 4.5vh;
  top: 35.5%;
  left: 2%;
}

.phonestyle{
  position: absolute;
  width: 1.3vw;
  height: 4.5vh;
  top: 48.5%;
  left: 2.2%;
}

.emailstyle{
  position: absolute;
  width: 1.3vw;
  height: 4.5vh;
  top: 61%;
  left: 2.2%;
}

.internetstyle{
  position: absolute;
  width: 1.3vw;
  height: 4.5vh;
  top: 73%;
  left: 2.2%;
}

.pickupdatestyle {
  font-size: 2vh;
  position: absolute;
  top: 39.8%;
  width: 28.5vh;
  left: 11.5%;
  font-family: 'Uber Move Text';
}

.pickuptimestyle {
  font-size: 2vh;
  position: absolute;
  top: 34.2%;
  width: 28.5vh;
  left: 11.5%;
  font-family: 'Uber Move Text';
}

.phone-top {
  font-size: 2.1vh;
  position: absolute;
  font-family: 'Uber Move Text';
  top: 51%;
  left: 11.5%;
}

.email-top {
  font-size: 2.1vh;
  position: absolute;
  font-family: 'Uber Move Text';
  top: 62.9%;
  left: 11.5%;
}

.website-top {
  font-size: 1.9vh;
  position: absolute;
  font-family: 'Uber Move Text';
  top: 75%;
  left: 11.5%;
}

.backdrop-dialogue{
  position: fixed;
  top: 0%;
  height: calc(10vh - 6rem);
  width: 15vw;
  background-color: #f3f3f8;
  overflow-y: auto;
  overflow-x: hidden;
  padding-top: 10%;
}

.postercomments {
  font-size: 2vh;
  overflow-wrap: break-word;
  margin-left: 0%;
}


.xmarkdialogue{
  position: absolute;
  left: 415%;
  top: -170%;
  width: 0.8vw;
  height: 2vh;
}

.page-container-two {
  position: fixed;
  top: 0%;
  height: calc(100vh - 6rem);
  width: 100vw;
  background-color: #eeeded;
  padding-top: 10%;
}

.postings-container-dashboard {
  position: absolute;
  display: flex;
  justify-content: flex-start;
  top: 27%;
  left: 0%;
  width: 50%;
  height: 68%;
  flex-wrap: nowrap;
  flex-direction: column;
  overflow-y: auto;
  overflow-x: hidden;
}

.thriftstorepost-dashboard {
  position: relative;
  margin: 1rem;
  flex-grow: 0;
  flex-shrink: 0;
  height: 20%;
  width: 33.9vw;
  padding-left: 3%;
  margin-right: 6%;
  margin-bottom: 6%;
  left: 25%;
  top: -3%;
  border-radius: 2%;
  background-color: #e0dfdf;
  flex-basis: 23%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.thriftstorepost-dashboard:focus{
  outline: 0;
  border: 2px solid #000000;
}

.thriftstorepostfont{
  position: absolute;
  font-size: 4vh;
  font-weight: 500;
  font-family:'Calibri';
  top: 1.5%;
  left: 3%;
}

.map-container-dashboard {
  width: 60.5%;
  height: 67.95vh;
  top: 39.7%;
  left: 86.5%;
  border-radius: 6px;
}

